--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </header>
             <div class="container-2 col-12">
                 <div>View full profile</div>
-                <div>See how it is getting bigger</div><
+                <div>See how it is getting bigger</div>
             </div>
             <div class="buffer col-12"></div>
             <section class="text-center col-12">
