--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <header class="text-center col-12">
                 <h1 class="text-uppercase"><strong>The biggest startup event of the year</strong></h1>
             </header>
-            <div class="container-2 col-12">
+<!--             <div class="container-2 col-12">
                 <div>View full profile</div>
                 <div>See how it is getting bigger</div>
-            </div>
+            </div> -->
             <div class="buffer col-12"></div>
             <section class="text-center col-12">
                 <hr>
